overflow fix2

--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ li{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(410px,100%), 1fr));
     padding-bottom: 1.5rem;
-    overflow: scroll;
 }
 .top h1{
     font-size: 90px;
@@ -227,6 +226,11 @@ footer h1{
 }
 .footer-list-items{
     margin-top: auto;
+}
+@media (max-width:500px){
+    .top, .nav__list{
+       overflow-x: scroll; 
+    }
 }
 @media(min-width:700px){
     picture{
